Fixed footer issue
Fixed the footer overlap - Was due to 'maincontent' having a specified height
-Joseph Morgan

--- a/Development_Sprint_1/CSS/styles.css
+++ b/Development_Sprint_1/CSS/styles.css
@@ -60,7 +60,6 @@ body {
 	margin-left:5%;
 	margin-right:5%;
 	margin-top:1%;
-	height: 500px;
 	padding: 10px;
 	border: 1px solid #FFFFFF;
 }
